--- a/src/styles/helpers/_mixins.scss
+++ b/src/styles/helpers/_mixins.scss
@@ -1,18 +1,22 @@
 @mixin font-style($type) {
-    @if $type == 1{
+    @if $type == 100{
+        font-family: 'Museo Sans Cyrl 100';
+        font-weight: 100;
+    }
+    @else if $type == 300{
         font-family: 'Museo Sans Cyrl 300';
         font-weight: 300;
     }
-    @else if $type == 2{
-        font-family: 'Museo Sans Cyrl';
+    @else if $type == 500{
+        font-family: 'Museo Sans Cyrl 500';
         font-weight: 500;
     }
-    @else if $type == 3{
+    @else if $type == 700{
         font-family: 'Museo Sans Cyrl 700';
         font-weight: 700;
     }
-    @else if $type == 4{
-        font-family: 'Museo Sans Cyrl';
+    @else if $type == 900{
+        font-family: 'Museo Sans Cyrl 900';
         font-weight: 900;
     }
 }
