--- a/src/blocks/components/header/header.scss
+++ b/src/blocks/components/header/header.scss
@@ -59,8 +59,13 @@
                     transform: rotate(-45deg);
                 }
                 &:last-child {
+                    right: 0;
+                    margin-left: auto;
+                    margin-right: auto;
                     bottom: calc(50% - 2.5px);
-                    height: 0px;
+                    height: 0;
+                    width: 0;
+                   
                 }
             }
         }
