--- a/src/blocks/components/checkbox/checkbox.pug
+++ b/src/blocks/components/checkbox/checkbox.pug
@@ -1,6 +1,18 @@
 mixin checkbox
-    .checkbox
-        input.checkbox__control(type = "checkbox", id = attributes.id, name = attributes.name, class = attributes.class, required = attributes.required)
+    .checkbox(class = attributes.class)
+        input.checkbox__control(type = "checkbox", id = attributes.id, name = attributes.name, required = attributes.required)
+        label(for = attributes.id).checkbox__label
+            if block
+                span.checkbox__title
+                    block
+            if attributes.required
+                span.checkbox__title.checkbox__title_red *
+            if attributes.placeholder
+                span.checkbox__subtitle #{attributes.placeholder}
+
+mixin checkbox-big
+    .checkbox.checkbox_big(class = attributes.class)
+        input.checkbox__control(type = "checkbox", id = attributes.id, name = attributes.name, required = attributes.required)
         label(for = attributes.id).checkbox__label
             if block
                 span.checkbox__title
