--- a/src/blocks/components/checkbox/checkbox.scss
+++ b/src/blocks/components/checkbox/checkbox.scss
@@ -1,8 +1,11 @@
 .checkbox{
+    $this: &;
+
     &__control {
         display: none;
     }
     &__label {
+        cursor: pointer;
         display: block;
         position: relative;
         padding-left: 30px;
@@ -53,6 +56,52 @@
         font-size: 10px;
         line-height: 12px;
         color: $color-gray; 
-
     }
+    &_big{
+        width: 60px;
+        #{$this}__label{
+            padding-left: 0;
+            padding-bottom: 49px;
+            display: flex;
+            justify-content: center;
+            &:before {
+                height: 40px;
+                width: 40px;
+                bottom: 0;
+                top: unset;
+                left: 0;
+                right: 0;
+                margin-left: auto;
+                margin-right: auto;
+                
+            }
+            &:after {
+                height: 13px;
+                width: 13px;
+                left: 0;
+                right: 0;
+                top: unset;
+                border-left: 3px solid $color-yellow;
+                border-bottom: 3px solid $color-yellow;
+                margin-left: auto;
+                margin-right: auto;
+                bottom: 17px;
+                opacity: 0;
+                transition: .3s;
+                
+            }
+        }
+        #{$this}__title {
+            @include font-style(700);
+            text-align: center;
+            display: flex;
+            height: 12px;
+            align-items: flex-end;
+            &_red {
+                padding-left: 3px;
+                color: $color-pink  
+            }
+        }
+    }
+  
 }
