validation and accordion

--- a/src/blocks/components/card-item/card-item.pug
+++ b/src/blocks/components/card-item/card-item.pug
@@ -2,7 +2,10 @@ mixin card-item(img, price, country, name, path, duration, lang, date, action)
     .card-item
         .card-item__header
             .card-item__img
-                img(src=`${img}`, alt=`${name}`)
+                picture
+                    source(type="image/webp" srcset=`${img}.webp`)
+                    source(type="image/jpeg" srcset=`${img}.jpeg`)
+                    img(src=`${img}.jpeg`, alt=`${name}`)
             .card-item__price
                 span #{price}
         .card-item__bottom
