--- a/src/blocks/components/card-list/card-list.pug
+++ b/src/blocks/components/card-list/card-list.pug
@@ -4,7 +4,7 @@ mixin card-list
     -
         var items = [
             {
-                img: '',
+                img: './img/card-items/card-item-1',
                 price: 'от 118 112 Р',
                 country: 'ИТАЛИЯ',
                 name: 'Под небом Тосканы',
@@ -14,7 +14,7 @@ mixin card-list
                 date: '27.04.19 - 04.05.19и еще 15 дат',
                 action: 'Авиаперелет включен!'
             },{
-                img: '',
+                img: './img/card-items/card-item-2',
                 price: '140 715 Р',
                 country: 'ИСЛАНДИЯ',
                 name: 'Майские каникулы в Исландии',
@@ -24,7 +24,7 @@ mixin card-list
                 date: '27.04.19 - 04.05.19',
                 action: ''
             },{
-                img: '',
+                img: './img/card-items/card-item-3',
                 price: '37 302 Р',
                 country: 'ТУРЦИЯ',
                 name: 'Открытие Турции',
@@ -34,7 +34,7 @@ mixin card-list
                 date: '28.04.19 - 05.05.19и еще 15 дат',
                 action: ''
             },{
-                img: '',
+                img: './img/card-items/card-item-4',
                 price: '145 000 Р',
                 country: 'НОРВЕГИЯ, ШПИЦБЕРГЕН',
                 name: 'От Свальбарда до Груманта',
