--- a/src/blocks/components/input/input.scss
+++ b/src/blocks/components/input/input.scss
@@ -25,15 +25,20 @@
         &::placeholder{
             color: $color-gray;
         }
+        &.error{
+            border-color: $color-pink;
+            & ~ .error{
+                position: absolute;
+                bottom: 15px;
+                left: 0px;
+                @include font-style(500);
+                font-size: 10px;
+                line-height: 12px;
+                color: $color-pink;
+            }
+           
+        }
     }
-    &__error{
-        position: absolute;
-        bottom: 15px;
-        left: 0px;
-        @include font-style(500);
-        font-size: 10px;
-        line-height: 12px;
-        color: $color-pink;
-    }
+    
 
 }
