--- a/src/blocks/components/form/form.pug
+++ b/src/blocks/components/form/form.pug
@@ -11,7 +11,7 @@ mixin form
             .form__col
                 +input(type="text", name="name", required="required").name ИМЯ
             .form__col
-                +input(type="text", name='phone').phone ТЕЛЕФОН
+                +input(type="text", name='phone', placeholder='+ 7 ___ ___ __ __').phone ТЕЛЕФОН
         +subtitle.form__subtitle О ПУТЕШЕСТВИИ
         .form__row
             .form__col
