custom scrollbar and select

--- a/src/blocks/components/form/form.pug
+++ b/src/blocks/components/form/form.pug
@@ -4,7 +4,7 @@ include ../input/input
 include ../checkbox/checkbox
 include ../button/button
 mixin form
-    form.form
+    form.form.form_validate
         +title.form__title Заявка на подбор путешествия
         +subtitle.form__subtitle НЕМНОГО О ВАС
         .form__row
