--- a/src/blocks/components/accordion/accordion.pug
+++ b/src/blocks/components/accordion/accordion.pug
@@ -1,5 +1,5 @@
 mixin accordion
     .accordion(class = attributes.class)
-        button.accordion__button #{attributes.title}
+        a(href='javascript:void(0);').accordion__button #{attributes.title}
         .accordion__body
             block
