--- a/src/blocks/components/accordion/accordion.scss
+++ b/src/blocks/components/accordion/accordion.scss
@@ -12,8 +12,10 @@
         border-radius: 29.5px;
         text-align: left;
         background: #ffffff;
+        color: #000000;
         width: 100%;
         position: relative;
+        z-index: 1;
         cursor: pointer;
         &:before{
             content: '';
@@ -40,12 +42,12 @@
         height: auto;
         max-height: 48px;
         overflow: hidden;
-        transition: max-height 0.3s linear, padding-top 0.3s linear, padding-bottom 0.3s linear;
+        transition: all 0.3s cubic-bezier(0.45, 0.05, 0.55, 0.95);
     }
     &_open{
         #{$this}__body{
-            padding-top: 56px;
-            padding-bottom: 30px;
+            padding-top: 48px;
+            padding-bottom: 21px;
             max-height: 540px;
         }
     }
