--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -6,6 +6,16 @@ h1, h2, h3, h4, h5, h6, ul {
     box-sizing: border-box;
 }
 
+*{
+    &::-webkit-scrollbar { width: 5px; height: 5px;}
+    &::-webkit-scrollbar-button {  display: none; }
+    &::-webkit-scrollbar-track { background-color: transparent;}
+    &::-webkit-scrollbar-track-piece { background-color: transparent;}
+    &::-webkit-scrollbar-thumb { height: 50px; background-color: #C4C4C4; border-radius: 3px;}
+    &::-webkit-scrollbar-corner { background-color: #C4C4C4;}
+    &::-webkit-resizer { background-color: #C4C4C4;}
+}
+
 body{
     @include font-style(700);
 }
