--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -7,6 +7,8 @@ h1, h2, h3, h4, h5, h6, ul {
 }
 
 *{
+    scrollbar-color: #C4C4C4 rgba(255,255,255,0);
+    scrollbar-width: thin;
     &::-webkit-scrollbar { width: 5px; height: 5px;}
     &::-webkit-scrollbar-button {  display: none; }
     &::-webkit-scrollbar-track { background-color: transparent;}
