--- a/src/blocks/components/checkbox/checkbox.scss
+++ b/src/blocks/components/checkbox/checkbox.scss
@@ -74,7 +74,7 @@
                 height: 40px;
                 width: 40px;
                 bottom: 0;
-                top: unset;
+                top: auto;
                 left: 0;
                 right: 0;
                 margin-left: auto;
@@ -86,7 +86,7 @@
                 width: 13px;
                 left: 0;
                 right: 0;
-                top: unset;
+                top: auto;
                 border-left: 3px solid $color-yellow;
                 border-bottom: 3px solid $color-yellow;
                 margin-left: auto;
