--- a/src/blocks/components/form/form.pug
+++ b/src/blocks/components/form/form.pug
@@ -17,7 +17,7 @@ mixin form
             .form__col
                 +input(type="text", name="locality", required="required", placeholder="Континент, страна или город").locality КУДА И КОГДА ХОТИТЕ ПОЕХАТЬ?
             .form__col
-                +input(type="text", name='date' placeholder="Даты или временной  интервал").date КОГДА?
+                +input(type="text", name='date' placeholder="Даты или временной  интервал").datepicker-here КОГДА?
             .form__col
                 +subtitle.form__subtitle УДОБНЫЙ СПОСОБ СВЯЗИ
                 .form__checkbox-group
