--- a/src/blocks/components/button/button.scss
+++ b/src/blocks/components/button/button.scss
@@ -1,4 +1,5 @@
 .button {
+  display: inline-block;
   outline: none !important;
   padding: 17px 30px;
   @include font-style(500);
@@ -9,9 +10,14 @@
   text-align: center;
   background: $color-yellow;
   width: 280px;
+  color: #000000;
   cursor: pointer;
+  transition: 0.3s;
+  &:hover{
+    background: #fff;
+  }
   &_submit{
-    border: none;
+    border-color: $color-yellow;
     text-align: left;
     position: relative;
     &:before{
@@ -25,6 +31,24 @@
       transform: rotate(45deg);
       width: 6px;
       height: 6px;
+    }
+    @keyframes button-hover {
+      0%{
+        right: 30px;
+      }
+      50%{
+        right: 20px;
+      }
+      100%{
+        right: 30px;
+      }
+    }
+    &:hover{
+      border-color: #000;
+      background: #fff;
+      &:before{
+        animation: button-hover 0.6s cubic-bezier(0.45, 0.05, 0.55, 0.95) infinite;
+      }
     }
   }
 }
