--- a/src/blocks/components/card-list/card-list.scss
+++ b/src/blocks/components/card-list/card-list.scss
@@ -1,15 +1,54 @@
 .card-list{
-    $this: &;
-    padding-top: 116px;
+    padding-top: 104px;
+    padding-bottom: 16px; 
+    position: relative;
+    &:before{
+        display: block;
+        content: '';
+        position: absolute;
+        bottom: 16px;
+        height: 2px;
+        width: 100%;
+        background: #C4C4C4;
+    }
+    @include sm-block{
+        padding-bottom: 0px; 
+    }
+    @include lg-block{
+        &:before{
+            display: none;
+        }
+        padding-top: 116px;
+    }
     &__title{
         padding-bottom: 46px;
+        position: relative;
+        &:before{
+            display: block;
+            content: '';
+            position: absolute;
+            bottom: 30px;
+            height: 2px;
+            width: 100%;
+            background: #C4C4C4;
+        }
+        @include lg-block{
+            &:before{
+                display: none;
+            }
+        }
     }
     &__row{
         @include row-flex();
     }
     &__col{
         @include col();
-        @include size(6);
-        padding-bottom: 56px;
+        @include size(12);
+        padding-bottom: 30px; 
+        @include sm-block{
+           @include size(6);
+            padding-bottom: 56px; 
+        }
+        
     }
 }
