--- a/src/blocks/components/input/input.pug
+++ b/src/blocks/components/input/input.pug
@@ -1,8 +1,21 @@
 mixin input
-    .input
-        if block
-            span.input__title
-                block
-        if attributes.required
-            span.input__title.input__title_red *
-        input.input__control(type = attributes.type, name = attributes.name, class = attributes.class, placeholder = attributes.placeholder, required = attributes.required)
+    if attributes.class == 'datepicker-here'
+        .input
+            if block
+                span.input__title
+                    block
+            if attributes.required
+                span.input__title.input__title_red *
+            input.input__control(type = attributes.type, name = attributes.name, class = attributes.class, placeholder = attributes.placeholder, required = attributes.required
+            data-range="true" data-multiple-dates-separator=" - ")
+    else
+        .input
+            if block
+                span.input__title
+                    block
+            if attributes.required
+                span.input__title.input__title_red *
+            input.input__control(type = attributes.type, name = attributes.name, class = attributes.class, placeholder = attributes.placeholder, required = attributes.required)
+   
+        
+    
