--- a/src/blocks/components/select/select.scss
+++ b/src/blocks/components/select/select.scss
@@ -3,6 +3,8 @@
     display: flex;
     flex-wrap: wrap;
     position: relative;
+    overflow: auto;
+    height: 100%;
     &__show {
         outline: none !important;
         @include font-style(700);
@@ -31,6 +33,7 @@
     }
     &__item{
         display: block;
+        width: 100%;
         font-size: 14px;
         line-height: 30px;
         @include font-style(500);
